added new functinalities

--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -12,9 +12,9 @@
             <b>Salary:</b>{{job['salary']}}
         </div>
         {% endif %}
-    </div>
+</div>
     <div class="col-2">
-        <button type="button" class="btn btn-outline-primary float-right align-middle">Apply</button>
+        <button type="button" class="btn btn-outline-primary float-right align-middle"><a href="mailto:hello@ASC.com?mailto:hello@ASC.com?subject=Application%20for%20{{jobs['title']}}&body=Name%3A%20%7Benter%20your%20name%7D%0D%0AResume%3A%20%7Benter%20your%20resume%7D%0D%0ALinkedln%20ID%3A%20%7Benter%20your%20linked%20id%7D%0D%0A" style="color: white;">Apply</a></button>
     </div>
 
 </div>
